# athenaeum

./: .gitignore  CLAUDE.md  README.md  athenaeum.config.yaml
dashboard/: next.config.ts  package-lock.json  package.json
dashboard/app/: focus.css  globals.css  layout.tsx  tweaks.css
dashboard/app/inbox/: page.tsx
dashboard/app/project/: page.tsx
dashboard/app/thinking/: page.tsx
dashboard/app/wiki/: page.tsx
dashboard/components/capture/: QuickCaptureModal.tsx
dashboard/components/editor/: ThoughtEditor.tsx
dashboard/components/graph/: ThinkingGraph.tsx
dashboard/components/shell/: CommandPalette.tsx  Sidebar.tsx  Topbar.tsx
dashboard/components/tweaks/: TweaksPanel.tsx
dashboard/lib/: api.ts  graph.ts  theme.ts  types.ts
docs/philosophy/: 001_design_philosophy.md
docs/system-design/: 001_system_design.md  002_dashboard_design.md  003_mvp_server.md  004_cli_design.md
docs/ui-design/claude-design-v1/: Knowledge OS.html  app.jsx  (+10 more)
knowledge-db/meta/: flow-log.md  graph.json  idempotency.jsonl  reading-list.md
server/: .env.example  pyproject.toml
server/athenaeum_server/: config.py  main.py
server/athenaeum_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/athenaeum_server/api/: graph.py  inbox.py  nodes.py  projects.py  search.py  sources.py  spaces.py  status.py  thinking.py  wiki.py
server/athenaeum_server/cli/: __main__.py  capture.py  idempotency.py  identity.py  inbox.py  main.py  output.py  think.py
server/athenaeum_server/lib/: frontmatter.py  git_ops.py  graph.py  ids.py  nodes.py  push_debouncer.py
(+82 files in other folders)
